# eps-workflow-quality-checks

./: .gitallowed  .gitignore  .pre-commit-config.yaml  .tool-versions  .tool-versions.asdf  MULTI_ARCH_DOCKER.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  release.config.js  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yaml
.github/scripts/: check_ecr_image_scan_results.sh  ignore.sh
.github/workflows/: build_nhsd_git_secrets.yml  pull_request.yml  quality-checks.properties.json  quality-checks.yml  release-cut.yml  release.yml  tag_latest_container_images.yml  tag_latest_dev_container.yml
dockerfiles/: nhsd-git-secrets-entrypoint.sh  nhsd-git-secrets.dockerfile
scripts/: check_python_licenses.sh
workflows/: quality-checks.yml
